nodejs proj1 updated, code is enhanced
